# JiPP2

./: CMakeLists.txt  README.md
Class2_lab4/: CMakeLists.txt
Class2_lab4/include/: Class.h
Class2_lab4/src/: Class.cpp  main.cpp
Class_lab4/: CMakeLists.txt
Class_lab4/include/: Class.h
Class_lab4/src/: Class.cpp  main.cpp
FirstClass/: CMakeLists.txt
FirstClass/include/: Class.h  FirstClass.h
FirstClass/src/: Class.cpp  FirstClass.cpp  main.cpp
Struktury_lab4/: CMakeLists.txt
Struktury_lab4/src/: main.cpp
allocation_basics/: main.cpp
firstLib/: CMakeLists.txt
firstLib/include/: lib.h
firstLib/src/: lib.cpp
firstLibCall/: CMakeLists.txt  main.cpp
matrixApp/: CMakeLists.txt
matrixApp/src/: main.cpp
matrixLib/: CMakeLists.txt
matrixLib/include/: matrixLib.h
matrixLib/src/: lib.cpp
simpleCalc/: CMakeLists.txt
simpleCalc/include/: calc.h
simpleCalc/src/: calc.cpp  main.cpp
