cmake_minimum_required(VERSION 3.16)
project(JiPP)
add_subdirectory(allocation_basics)
add_subdirectory(simpleCalc)
add_subdirectory(firstLib)
add_subdirectory(firstLibCall)
add_subdirectory(FirstClass)
add_subdirectory(Struktury_lab4)
add_subdirectory(Class_lab4)


add_subdirectory(matrixLib)
add_subdirectory(matrixApp)
